--- a/src/main/resources/en-US.yml
+++ b/src/main/resources/en-US.yml
@@ -1,16 +1,16 @@
 messages:
-  reloadConfig: "&2Reloaded config files."
+  reloadConfig: '&2Reloaded config files.'
 error:
-  errorYouDoNotHavePermission: "&cYou don't have acces to use that command."
-  errorNotEnoughArguments: "&cNot enought arguments."
-  unknownCommand: "&cUnknown command!"
-  notPlayer: "&cThis command must be executed by a player!"
+  errorYouDoNotHavePermission: '&cYou don''t have access to use that command.'
+  errorNotEnoughArguments: '&cNot enough arguments.'
+  unknownCommand: '&cUnknown command!'
+  notPlayer: '&cThis command must be executed by a player!'
 enchant:
-  errorLessThanOne: "&5The level must be more or equal to 1."
-  noAccesToEnchantment: "&cYou don't have acces to enchant that Enchantment"
-  succes: "&2Enchanted item in hand with %s"
-  error: "&cDidn't enchant item with %s"
+  errorLessThanOne: '&5The level must be more or equal to 1.'
+  noAccessToEnchantment: '&cYou don''t have access to enchant that Enchantment'
+  success: '&2Enchanted item in hand with %s'
+  error: '&cDidn''t enchant item with %s'
 unenchant:
-  noAccesToEnchantment: "&cYou don't have acces to unenchant that Enchantment"
-  succes: "&2Un-enchanted item in hand with %s"
-  error: "&cDidn't un-enchant item with %s"
+  noAccessToEnchantment: '&cYou don''t have access to unenchant that Enchantment'
+  success: '&2Un-enchanted item in hand with %s'
+  error: '&cDidn''t un-enchant item with %s'
