Edit the code (Javadoc, look)

--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ uploadArchives {
 /* ********************************************************************************* */
 
 // Deletes every file except .gitignore
-/*clean.doFirst {
+clean.doFirst {
     if (file("/output").exists()) {
         new File(rootDir, "/output").eachFile() { file ->
             if (!file.getName().equalsIgnoreCase(".gitignore")) {
@@ -100,7 +100,7 @@ uploadArchives {
             }
         }
     }
-}*/
+}
 
 uploadArchives {
     repositories {
