Added an update Checker and changed the version in gradle.build to 2.5.3-RELEASE.

--- a/src/main/resources/Template-en-US.yml
+++ b/src/main/resources/Template-en-US.yml
@@ -1,4 +1,10 @@
 # This fille accepts color codes with '&'
+info:
+# '%1$s' is the latest version, '%2$s' is the download link
+  newVersionAvailable: "A new version is available version: %1$s, download link: %2$s"
+# No extra args
+  noVersionAvailable: "No new version are available."
+
 messages:
   reloadConfig: "&2Reloaded config files."
 error:
