--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,6 @@
+#If the lore has to have the specific color code As defined by the Enchnatment.
+colorCodeSpecific: true
+
 # The file to be loaded with the localization messages (Without the .yml)
 messageLocalizationFile: en-US
 
