--- a/src/main/resources/en-US.yml
+++ b/src/main/resources/en-US.yml
@@ -1,12 +1,15 @@
 info:
-  newVersionAvailable: "A new version is available version: %1$s, download link: %2$s"
-  noVersionAvailable: "No new version are available."
+  newVersionAvailable: 'A new version is available version: %1$s, download link: %2$s'
+  noVersionAvailable: 'No new version are available.'
 messages:
   reloadConfig: '&2Reloaded config files.'
 error:
+  invalid: "&c'%1$s' is not valid."
   errorYouDoNotHavePermission: '&cYou don''t have access to use that command.'
+  errorToManyArguments: '&cTo many arguments.'
   errorNotEnoughArguments: '&cNot enough arguments.'
   unknownCommand: '&cUnknown command!'
+  noItemInHand: "&cYou must have an item in your main hand."
   notPlayer: '&cThis command must be executed by a player!'
 enchant:
   errorLessThanOne: '&5The level must be more or equal to 1.'
