--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -20,43 +20,41 @@ commands:
 permissions:
   adx.custom.enchantmentapi.plugin.*:
     description: Gives acces to all ${plugin_name} commands
+    default: op
     children:
       adx.ceapi.*: true
   adx.ceapi.*:
     description: Gives acces to all ${plugin_name} commands
+    default: false
     children:
       adx.ceapi.use: true
       adx.ceapi.list: true
-      adx.ceapi.enchant.*: true
-      adx.ceapi.unenchant.*: true
+      adx.ceapi.enchant: true
+      adx.ceapi.unenchant: true
+      adx.ceapi.enchantment.*: true
 #-----------------------------------------------------
   adx.ceapi.use:
     description: Allows the use of /ceapi
     default: false
-  adx.ceapi.enchant.use:
-    description: Allows the use of /ceapi enchant <ench_id> [lvl]
-    default: false
-    children:
-      adx.ceapi.use: true
-  adx.ceapi.unenchant.use:
-    description: Allows the use of /ceapi unenchant <ench_id>
-    default: false
-    children:
-      adx.ceapi.use: true
-    
   adx.ceapi.list:
     description: Allows the use of /ceapi list
     default: false
     children:
       adx.ceapi.use: true
-  
-  adx.ceapi.enchant.*:
-    description: Allows the use of /ceapi enchant <ench_id> [lvl] and all of its enchantment
+  adx.ceapi.enchant:
+    description: Allows the use of /ceapi enchant <ench_id> [lvl]
     default: false
     children:
-      adx.ceapi.enchant.use: true
-  adx.ceapi.unenchant.*:
+      adx.ceapi.use: true
+  adx.ceapi.unenchant:
     description: Allows the use of /ceapi unenchant <ench_id>
     default: false
     children:
-      adx.ceapi.unenchant.use: true
+      adx.ceapi.use: true
+  adx.ceapi.enchantment.*:
+    description: Allows the use of all Enchantments by /ceapi unenchant/enchant <ench_id>
+    default: false
+    children:
+      adx.ceapi.use: true
+      adx.ceapi.enchant: true
+      adx.ceapi.unenchant: true
