--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include ':modules:API'
 include ':modules:v1_8'
 include ':modules:v1_9'
+include ':modules:v1_10'
 
 rootProject.name = 'CustomEnchantmentAPI'
