Changed version to 3.0.0-RELEASE In a lot of cases replaces Enchantment with RegsiteredEnchnatment
the ID uses getName not getDisplay to create

Enchantment
 + getName()
 + getDescription()
 + setDescription(String) **protected

 /ceapi enchantment <Enchantment ID>  - gets the information of a Enchantment permission adx.ceapi.enchantment

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -30,6 +30,7 @@ permissions:
       adx.ceapi.use: true
       adx.ceapi.list: true
       adx.ceapi.enchant: true
+      adx.ceapi.enchantment: true
       adx.ceapi.unenchant: true
       adx.ceapi.enchantment.*: true
 #-----------------------------------------------------
@@ -41,6 +42,11 @@ permissions:
     default: false
     children:
       adx.ceapi.use: true
+  adx.ceapi.enchantment:
+      description: Allows the use of /ceapi enchantment
+      default: false
+      children:
+        adx.ceapi.use: true
   adx.ceapi.enchant:
     description: Allows the use of /ceapi enchant <ench_id> [lvl]
     default: false
