--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ configure(allprojects - project(':modules')) {
 
 archivesBaseName = 'CustomEnchantmentAPI'
 group = 'adx.audioxd.customenchantmentapi'
-version = '2.7.6-RELEASE'
+version = '2.8-RELEASE'
 
 def MainClass = group + '.' + archivesBaseName
 def delete_on_upload = true
@@ -41,15 +41,7 @@ def create_doc = false
 
 // The dependencies
 dependencies {
-    compile(project(':modules:API')) {
-        transitive = false
-    }
-
-    compile(group: 'org.spigotmc', name: 'spigot-api', version: '1.8-R0.1-SNAPSHOT') {
-        // Because the bungeecord-chat.jar isn't being found
-        transitive = false
-    }
-    compile group: 'org.bukkit', name: 'bukkit', version: '1.8-R0.1-SNAPSHOT'
+    compile(project(':modules:API'))
 }
 
 /* ********************************************************************************* */
